Fixed z-index issues

--- a/source/styles/blog-layout-style.css
+++ b/source/styles/blog-layout-style.css
@@ -27,6 +27,7 @@ header {
 	flex-direction: row;
 	align-items: center;
 	padding: 0px;
+	z-index: 1;
 }
 
 header > h1 {
@@ -136,7 +137,6 @@ aside.blog-nav {
 	padding: 8px;
 	box-shadow: black 0px 0px 8px;
 	width: 260px;
-	z-index: -1;
 }
 
 aside.blog-nav ul {
@@ -150,5 +150,4 @@ main > main {
 	flex-grow: 1;
 	padding: 8px;
 	margin: 0px 80px 30px 80px;
-	z-index: -1;
 }
