--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -62,6 +62,7 @@ nav li:hover > a {
 
 nav {
 	background-color: #303030;
+	z-index: 1;
 }
 
 nav ul {
@@ -111,7 +112,6 @@ main {
 	flex-grow: 1;
 	margin: 0px 140px 30px 140px;
 	box-shadow: black 0px 0px 8px;
-	z-index: -1;
 }
 
 a {
